[gd_scene load_steps=39 format=3 uid="uid://dd5ufnsu5cdyy"]

[ext_resource type="Script" path="res://Objects/Scripts/Transporter/Transporter.gd" id="1_pvtlh"]
[ext_resource type="Texture2D" uid="uid://bnwvafghwlv86" path="res://Assets/SpriteSheets/Sprite_sheet_02.png" id="1_vb34c"]
[ext_resource type="Resource" uid="uid://bxry37ogcb3nd" path="res://Upgrades/transport_speed.tres" id="2_kd1kk"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/StateMachine.gd" id="2_nwyt7"]
[ext_resource type="Resource" uid="uid://cs3ttvobr7kr2" path="res://Upgrades/transport_quantity.tres" id="3_kwnor"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/GetStone.gd" id="3_o3ubf"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/PickUpStone.gd" id="4_wgq5y"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/DeliverStone.gd" id="5_1qbh2"]
[ext_resource type="Texture2D" uid="uid://bxqtllalv6j8b" path="res://Assets/SpriteSheets/Sprite_sheet_04.png" id="5_7fki6"]
[ext_resource type="Texture2D" uid="uid://cck6f0fk2l5kx" path="res://Assets/SpriteSheets/Sprite_sheet_03.png" id="6_618nt"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/PlaceStone.gd" id="7_ukimv"]
[ext_resource type="Script" path="res://Objects/Scripts/Transporter/StateMachine/Wait.gd" id="11_0dn0u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0fnv"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpcth"]
atlas = ExtResource("5_7fki6")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcx22"]
atlas = ExtResource("5_7fki6")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3p1s"]
atlas = ExtResource("5_7fki6")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6s8d"]
atlas = ExtResource("5_7fki6")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_eimji"]
atlas = ExtResource("1_vb34c")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk160"]
atlas = ExtResource("1_vb34c")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_an7fg"]
atlas = ExtResource("1_vb34c")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkvyy"]
atlas = ExtResource("1_vb34c")
region = Rect2(24, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rpkb"]
atlas = ExtResource("1_vb34c")
region = Rect2(0, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1rkt"]
atlas = ExtResource("1_vb34c")
region = Rect2(8, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_db7dn"]
atlas = ExtResource("1_vb34c")
region = Rect2(16, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfrmv"]
atlas = ExtResource("1_vb34c")
region = Rect2(24, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxxb3"]
atlas = ExtResource("5_7fki6")
region = Rect2(0, 8, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljk3f"]
atlas = ExtResource("5_7fki6")
region = Rect2(8, 8, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajk7v"]
atlas = ExtResource("5_7fki6")
region = Rect2(16, 8, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s6bk"]
atlas = ExtResource("5_7fki6")
region = Rect2(24, 8, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1btml"]
atlas = ExtResource("6_618nt")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_y37xg"]
atlas = ExtResource("6_618nt")
region = Rect2(8, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bexds"]
atlas = ExtResource("6_618nt")
region = Rect2(16, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmp88"]
atlas = ExtResource("6_618nt")
region = Rect2(24, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yebg"]
atlas = ExtResource("1_vb34c")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qub22"]
atlas = ExtResource("1_vb34c")
region = Rect2(8, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_se576"]
atlas = ExtResource("1_vb34c")
region = Rect2(16, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l7nr"]
atlas = ExtResource("1_vb34c")
region = Rect2(24, 24, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_uo0r8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpcth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcx22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3p1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6s8d")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eimji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk160")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an7fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkvyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rpkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1rkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db7dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfrmv")
}],
"loop": false,
"name": &"Pick_Up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxxb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljk3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajk7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s6bk")
}],
"loop": true,
"name": &"Walk_Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1btml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y37xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bexds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmp88")
}],
"loop": true,
"name": &"Walk_Heavy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yebg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qub22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se576")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l7nr")
}],
"loop": true,
"name": &"Walk_Stand",
"speed": 5.0
}]

[node name="Transporter" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_pvtlh")
transporter_speed = ExtResource("2_kd1kk")
transport_quantity = ExtResource("3_kwnor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y0fnv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_uo0r8")
animation = &"Pick_Up"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_nwyt7")
initial_state = NodePath("GetStone")

[node name="GetStone" type="Node" parent="StateMachine"]
script = ExtResource("3_o3ubf")

[node name="PickUpStone" type="Node" parent="StateMachine"]
script = ExtResource("4_wgq5y")

[node name="DeliverStone" type="Node" parent="StateMachine"]
script = ExtResource("5_1qbh2")

[node name="PlaceStone" type="Node" parent="StateMachine"]
script = ExtResource("7_ukimv")

[node name="Wait" type="Node" parent="StateMachine"]
script = ExtResource("11_0dn0u")

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/PickUpStone" method="_on_animated_sprite_2d_animation_finished"]
